--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -20,12 +20,13 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="50dp"
+                android:layout_marginLeft="60dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginRight="60dp"
                 android:background="@drawable/button_background"
                 android:text="My Profile"
-                android:textSize="30sp"></Button>
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"></Button>
 
             <ImageView
                 android:layout_width="match_parent"
@@ -39,11 +40,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="User Name"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+                >
 
             </TextView>
 
@@ -53,8 +55,6 @@
                 android:layout_height="38dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:text="userName"
-                android:textSize="20dp"
                 android:gravity="center"
                 android:background="@drawable/edit_text"
                 >
@@ -65,11 +65,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Full Name"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+                >
 
             </TextView>
 
@@ -89,11 +90,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Email"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+              >
 
             </TextView>
 
@@ -113,11 +115,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Phone Number"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+                >
 
             </TextView>
 
@@ -137,14 +140,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="NIC number"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+                android:layout_marginRight="50dp">
 
             </TextView>
-
 
             <TextView
                 android:id="@+id/nicNumber"
@@ -162,11 +164,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Relative-1 Name"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+                android:layout_marginRight="50dp">
 
             </TextView>
 
@@ -186,11 +188,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Relative-1 Number"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+               >
 
             </TextView>
 
@@ -210,11 +213,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Relative-2 Name"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+                android:layout_marginRight="50dp">
 
             </TextView>
 
@@ -234,11 +237,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Relative-2 Number"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+                android:layout_marginRight="50dp">
 
             </TextView>
 
@@ -258,11 +261,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Relative-3 Name"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+                >
 
             </TextView>
 
@@ -282,18 +286,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Relative-3 Number"
-                android:textSize="24sp"
+                android:textColor="#263238"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:textColor="#455A64">
+                android:layout_marginRight="50dp">
 
             </TextView>
 
             <TextView
                 android:id="@+id/r3_num"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:textSize="20dp"
@@ -303,23 +307,19 @@
             </TextView>
 
 
-
-
-
-
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <Button
-                    android:layout_width="152dp"
+                    android:layout_width="155dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginLeft="25dp"
                     android:layout_marginTop="30dp"
-                    android:background="@drawable/button_background"
+                    android:background="@drawable/bottom_btn"
                     android:text="My Requests"
-                    android:textColor="#392B2B"
+                    android:textColor="#FFFFFF"
                     android:textSize="18sp"
                     android:onClick="my_requests"
                     tools:ignore="OnClick">
@@ -327,15 +327,15 @@
                 </Button>
 
                 <Button
-                    android:layout_width="152dp"
+                    android:layout_width="155dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginRight="100dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="50dp"
-                    android:background="@drawable/button_background"
+                    android:background="@drawable/bottom_btn"
                     android:text="Edit Profile"
-                    android:textColor="#3C2929"
+                    android:textColor="#FFFFFF"
                     android:textSize="18sp"
                     android:onClick="edit_profile"
                     tools:ignore="OnClick">
