--- a/app/src/main/res/layout/activity_edit_prof.xml
+++ b/app/src/main/res/layout/activity_edit_prof.xml
@@ -43,8 +43,8 @@
                 android:text="User Name"
                 android:textSize="20sp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textColor="#455A64">
 
             </TextView>
@@ -53,8 +53,8 @@
                 android:id="@+id/userName"
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textSize="25dp"
                 android:gravity="center"
                 android:background="@drawable/edit_text"
@@ -66,10 +66,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="First Name"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textColor="#455A64">
 
             </TextView>
@@ -78,8 +78,8 @@
                 android:id="@+id/fName"
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:background="@drawable/edit_text">
@@ -90,10 +90,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Last Name"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textColor="#455A64">
 
             </TextView>
@@ -102,8 +102,8 @@
                 android:id="@+id/lName"
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:background="@drawable/edit_text">
@@ -114,10 +114,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Email"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textColor="#455A64">
 
             </TextView>
@@ -126,8 +126,8 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:background="@drawable/edit_text">
@@ -138,10 +138,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Phone Number"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textColor="#455A64">
 
             </TextView>
@@ -150,8 +150,8 @@
                 android:id="@+id/phoneNumber"
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:background="@drawable/edit_text">
@@ -162,10 +162,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:text="Id Number"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textColor="#455A64">
 
             </TextView>
@@ -174,8 +174,8 @@
                 android:id="@+id/nicNumber"
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:background="@drawable/edit_text">
@@ -191,12 +191,12 @@
                 <Button
                     android:layout_width="152dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginLeft="25dp"
                     android:layout_marginTop="30dp"
-                    android:background="@drawable/button_background"
+                    android:background="@drawable/bottom_btn"
                     android:text="Cancel"
                     android:onClick="Cancel"
-                    android:textColor="#392B2B"
+                    android:textColor="#FFFFFF"
                     android:textSize="18sp">
 
                 </Button>
@@ -204,14 +204,14 @@
                 <Button
                     android:layout_width="152dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="25dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginRight="100dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="50dp"
-                    android:background="@drawable/button_background"
+                    android:background="@drawable/bottom_btn"
                     android:text="Save Changes"
                     android:onClick="updateProfile"
-                    android:textColor="#3C2929"
+                    android:textColor="#FFFFFF"
                     android:textSize="18sp">
 
                 </Button>
