--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -15,7 +15,8 @@
         android:layout_marginRight="50dp"
         android:background="@drawable/button_background"
         android:text="Feedback"
-        android:textSize="30sp"></Button>
+        android:textColor="#FFFFFF"
+        android:textSize="23dp"></Button>
 
 
     <ScrollView
@@ -60,10 +61,11 @@
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/button_background"
+                android:background="@drawable/bottom_btn"
                 android:text="Send Feedback"
                 android:onClick="sendfeedback"
-                android:textSize="30sp"></Button>
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"></Button>
 
         </LinearLayout>
 
