--- a/app/src/main/res/drawable/bottom_btn.xml
+++ b/app/src/main/res/drawable/bottom_btn.xml
@@ -4,7 +4,7 @@
         android:radius="15dp"
         />
     <solid
-        android:color="#0277BD"
+        android:color="#03A9F4"
         />
     <padding
         android:left="0dp"
@@ -18,6 +18,6 @@
         />
     <stroke
         android:width="3dp"
-        android:color="#00E5FF"
+        android:color="#1DE9B6"
         />
 </shape>
