--- a/app/src/main/res/layout/activity_add_relations.xml
+++ b/app/src/main/res/layout/activity_add_relations.xml
@@ -61,16 +61,14 @@
                 android:id="@+id/r1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:textSize="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:textSize="20sp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:backgroundTint="#E6E2EC"
                 android:background="@drawable/edit_text"
                 >
 
@@ -94,16 +92,14 @@
                 android:id="@+id/r1_num"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:textSize="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:backgroundTint="#E6E2EC"
                 android:background="@drawable/edit_text">
 
             </EditText>
