--- a/app/src/main/res/layout/request_row.xml
+++ b/app/src/main/res/layout/request_row.xml
@@ -11,7 +11,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+        android:padding="20dp"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/layoutview"
+        android:background="@drawable/button_background"
+        >
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
@@ -139,6 +143,32 @@
                android:textSize="21dp" />
 
        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:paddingLeft="10dp"
+                android:gravity="left"
+                android:text="Status"
+                android:textColor="#000000"
+                android:textSize="21dp" />
+
+            <TextView
+                android:id="@+id/tv5"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:gravity="left"
+                android:text="Status"
+                android:textColor="#616161"
+                android:textSize="21dp" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
 
